--- a/workflows/release.yml
+++ b/workflows/release.yml
@@ -19,6 +19,32 @@ jobs:
           distribution: 'adopt'
           java-version: '11'
 
+      - name: Read version.properties
+        id: read_version
+        run: |
+          VERSION_CODE=$(grep 'VERSION_CODE' version.properties | cut -d'=' -f2)
+          VERSION_NAME=$(grep 'VERSION_NAME' version.properties | cut -d'=' -f2)
+          echo "VERSION_CODE=$VERSION_CODE"
+          echo "VERSION_NAME=$VERSION_NAME"
+          echo "##[set-output name=version_code;]$VERSION_CODE"
+          echo "##[set-output name=version_name;]$VERSION_NAME"
+
+      - name: Increment version code
+        id: increment_version
+        run: |
+          VERSION_CODE=$(( ${{ steps.read_version.outputs.version_code }} + 1 ))
+          echo "VERSION_CODE=$VERSION_CODE" >> $GITHUB_ENV
+
+      - name: Update version.properties
+        run: |
+          echo "VERSION_CODE=${{ env.VERSION_CODE }}" > version.properties
+          echo "VERSION_NAME=${{ steps.read_version.outputs.version_name }}" >> version.properties
+          git config --global user.name 'github-actions'
+          git config --global user.email 'github-actions@github.com'
+          git add version.properties
+          git commit -m "Increment version to ${{ env.VERSION_CODE }}"
+          git push
+
       - name: Build AAR
         run: ./gradlew assembleRelease
 
@@ -26,17 +52,17 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
         with:
-          tag_name: v1.0.${{ github.run_number }}
-          release_name: Release v1.0.${{ github.run_number }}
+          tag_name: v1.0.${{ env.VERSION_CODE }}
+          release_name: Release v1.0.${{ env.VERSION_CODE }}
           draft: false
           prerelease: false
 
       - name: Upload AAR to Release
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: app/build/outputs/aar/app-release.aar
