--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Release AAR
+name: Release on Push to Main
 
 on:
   push:
@@ -6,65 +6,59 @@ on:
       - main
 
 jobs:
-  build:
+  release:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
 
       - name: Set up JDK
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v2
         with:
-          distribution: 'adopt'
+          distribution: 'zulu'
           java-version: '11'
 
-      - name: Read version.properties
-        id: read_version
-        run: |
-          VERSION_CODE=$(grep 'VERSION_CODE' version.properties | cut -d'=' -f2)
-          VERSION_NAME=$(grep 'VERSION_NAME' version.properties | cut -d'=' -f2)
-          echo "VERSION_CODE=$VERSION_CODE"
-          echo "VERSION_NAME=$VERSION_NAME"
-          echo "##[set-output name=version_code;]$VERSION_CODE"
-          echo "##[set-output name=version_name;]$VERSION_NAME"
+      - name: Get current version
+        id: get_version
+        run: echo "::set-output name=current_version::$(grep 'VERSION_NAME=' gradle.properties | cut -d'=' -f2)"
 
-      - name: Increment version code
-        id: increment_version
+      - name: Bump version
+        id: bump_version
         run: |
-          VERSION_CODE=$(( ${{ steps.read_version.outputs.version_code }} + 1 ))
-          echo "VERSION_CODE=$VERSION_CODE" >> $GITHUB_ENV
+          current_version=${{ steps.get_version.outputs.current_version }}
+          IFS='.' read -r -a version_parts <<< "$current_version"
+          version_parts[2]=$((version_parts[2]+1))
+          new_version="${version_parts[0]}.${version_parts[1]}.${version_parts[2]}"
+          echo "::set-output name=new_version::$new_version"
 
-      - name: Update version.properties
+      - name: Update gradle.properties version
         run: |
-          echo "VERSION_CODE=${{ env.VERSION_CODE }}" > version.properties
-          echo "VERSION_NAME=${{ steps.read_version.outputs.version_name }}" >> version.properties
-          git config --global user.name 'github-actions'
-          git config --global user.email 'github-actions@github.com'
-          git add version.properties
-          git commit -m "Increment version to ${{ env.VERSION_CODE }}"
-          git push
+          new_version=${{ steps.bump_version.outputs.new_version }}
+          sed -i "s/VERSION_NAME=${{ steps.get_version.outputs.current_version }}/VERSION_NAME=$new_version/" gradle.properties
 
-      - name: Build AAR
+      - name: Commit version bump
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
+          git commit -am "Bump version to ${{ steps.bump_version.outputs.new_version }}"
+          git push origin main
+
+      - name: Build .aar
         run: ./gradlew assembleRelease
 
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+      - name: Upload Release Artifact
+        uses: actions/upload-artifact@v3
         with:
-          tag_name: v1.0.${{ env.VERSION_CODE }}
-          release_name: Release v1.0.${{ env.VERSION_CODE }}
-          draft: false
-          prerelease: false
+          name: my-library.aar
+          path: app/build/outputs/aar/app-release.aar
 
-      - name: Upload AAR to Release
-        uses: actions/upload-release-asset@v1
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: ${{ steps.bump_version.outputs.new_version }}
+          name: Release ${{ steps.bump_version.outputs.new_version }}
+          body: "Release of version ${{ steps.bump_version.outputs.new_version }}."
+          files: app/build/outputs/aar/app-release.aar
         env:
           GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: app/build/outputs/aar/app-release.aar
-          asset_name: app-release.aar
-          asset_content_type: application/zip
