--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and Release AARs
+name: Build and Publish to JitPack
 
 on:
   push:
@@ -10,66 +10,36 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v2
-      with:
-        java-version: '17'
-        distribution: 'adopt'
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+          distribution: 'adopt'
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x ./gradlew
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
 
-    - name: Build AAR files
-      run: ./gradlew assembleRelease
-
-    - name: Upload AAR files
-      uses: actions/upload-artifact@v2
-      with:
-        name: AAR-files
-        path: |
-          **/build/outputs/aar/*.aar
+      - name: Build AAR files
+        run: ./gradlew assembleRelease
 
   release:
     needs: build
     runs-on: ubuntu-latest
+
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-      with:
-        fetch-depth: 0  # Ensure full history is fetched
+      - name: Checkout repository
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Ensure full history is fetched
 
-    - name: Download AAR artifacts
-      uses: actions/download-artifact@v2
-      with:
-        name: AAR-files
-        path: .
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+          distribution: 'adopt'
 
-    - name: Determine Tag Version
-      id: get_version
-      run: echo "::set-output name=version::v1.0.0"
-
-    - name: Create GitHub Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ steps.get_version.outputs.version }}
-        release_name: Release ${{ steps.get_version.outputs.version }}
-        draft: false
-        prerelease: false
-
-    - name: Install GitHub CLI
-      run: sudo apt-get install -y gh
-
-    - name: Upload AAR to Release
-      env:
-        GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
-      run: |
-        for file in $(find . -name "*.aar"); do
-          echo "Uploading $file..."
-          gh release upload ${{ steps.get_version.outputs.version }} "$file" --clobber
-        done
+      - name: Build and Publish
+        run: ./gradlew clean build publish
